--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1 class="text-5xl text-center mt-4">
-        Functional <span class="text-red-500 font-medium">Baap-Er-Bank</span>!!!
+        Functional <span class="text-red-500 font-medium">Bank</span>!!!
       </h1>
     </header>
     <main>
