--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               id="withdraw-field"
               class="w-3/4 px-4 py-3 rounded block"
               type="text"
-              placeholder="$ Amount  you want to deposit"
+              placeholder="$ Amount  you want to Withdraw"
             />
             <button
               id="btn-withdraw"
